--- a/velero/schedule/zen5-br-scripts-cm.yaml
+++ b/velero/schedule/zen5-br-scripts-cm.yaml
@@ -30,6 +30,7 @@ data:
 
     #Setup backup location
     function main {
+        save_log "logs" "backup_log"
         title "Beginning zen 5 backup process in namespace $ZEN_NAMESPACE."
         info "Creating necessary directories"
         mkdir -p $BACKUP_DIR/workspace
@@ -89,6 +90,27 @@ data:
         success "Backup completed."
     }
 
+    function save_log(){
+        local LOG_DIR="$BACKUP_DIR/$1"
+        LOG_FILE="$LOG_DIR/$2_$(date +'%Y%m%d%H%M%S').log"
+
+        if [[ ! -d $LOG_DIR ]]; then
+            mkdir -p "$LOG_DIR"
+        fi
+
+        # Create a named pipe
+        PIPE=$(mktemp -u)
+        mkfifo "$PIPE"
+
+        # Tee the output to both the log file and the terminal
+        tee "$LOG_FILE" < "$PIPE" &
+
+        # Redirect stdout and stderr to the named pipe
+        exec > "$PIPE" 2>&1
+
+        # Remove the named pipe
+        rm "$PIPE"
+    }
 
     function msg() {
         printf '%b\n' "$1"
@@ -138,7 +160,10 @@ data:
     BACKUP_DIR=/zen5/zen-backup
 
     function main {
+        save_log "logs" "restore_log"
         title "Beginning restore process for zenservice $ZENSERVICE_NAME in namespace $ZEN_NAMESPACE."
+        info "Wait for zenservice $ZENSERVICE_NAME to be ready..."
+        wait_for_zenservice
         info "Enabling Zen operator maintenance mode and scale down deployments"
         #[2.2.2] Enable Zen operator maintenance mode and scale down deployments
         oc patch zenservice ${ZENSERVICE_NAME} --namespace ${ZEN_NAMESPACE} --type=merge --patch '{"spec": {"ignoreForMaintenance": true}}'
@@ -284,6 +309,52 @@ data:
         oc patch zenservice ${ZENSERVICE_NAME} --namespace ${ZEN_NAMESPACE} --type=merge --patch '{"spec": {"ignoreForMaintenance": false}}'
 
         success "Restore complete for zenservice $ZENSERVICE_NAME in namespace $ZEN_NAMESPACE."
+    }
+
+    function wait_for_zenservice {
+        info "Waiting for zenservice $ZENSERVICE_NAME to complete in namespace $ZEN_NAMESPACE."
+        zenservice_exists=$(oc get zenservice $ZENSERVICE_NAME -n $ZEN_NAMESPACE --no-headers || echo fail)
+        if [[ $job_exists != "fail" ]]; then
+            completed=$(oc get zenservice --no-headers $ZENSERVICE_NAME -n $ZEN_NAMESPACE | awk '{print $2}')
+            retry_count=20
+            while [[ $completed != "Completed" ]] && [[ $retry_count > 0 ]]
+            do
+                info "Wait for zenservice $ZENSERVICE_NAME to complete. Try again in 15s."
+                sleep 15
+                completed=$(oc get zenservice --no-headers $ZENSERVICE_NAME -n $ZEN_NAMESPACE | awk '{print $2}')
+                retry_count=$retry_count-1
+            done
+
+            if [[ $retry_count == 0 ]] && [[ $completed != "1/1" ]]; then
+                error "Timed out waiting for zenservice $ZENSERVICE_NAME."
+            else
+                info "Zenservice $ZENSERVICE_NAME ready."
+            fi
+        else
+            error "Zenservice $ZENSERVICE_NAME not present."
+        fi
+    }
+
+    function save_log(){
+        local LOG_DIR="$BACKUP_DIR/$1"
+        LOG_FILE="$LOG_DIR/$2_$(date +'%Y%m%d%H%M%S').log"
+
+        if [[ ! -d $LOG_DIR ]]; then
+            mkdir -p "$LOG_DIR"
+        fi
+
+        # Create a named pipe
+        PIPE=$(mktemp -u)
+        mkfifo "$PIPE"
+
+        # Tee the output to both the log file and the terminal
+        tee "$LOG_FILE" < "$PIPE" &
+
+        # Redirect stdout and stderr to the named pipe
+        exec > "$PIPE" 2>&1
+
+        # Remove the named pipe
+        rm "$PIPE"
     }
 
     function msg() {
