--- a/velero/schedule/zen5-br-scripts-cm.yaml
+++ b/velero/schedule/zen5-br-scripts-cm.yaml
@@ -31,6 +31,7 @@ data:
     #Setup backup location
     function main {
         save_log "logs" "backup_log"
+        trap cleanup_log EXIT
         title "Beginning zen 5 backup process in namespace $ZEN_NAMESPACE."
         info "Creating necessary directories"
         mkdir -p $BACKUP_DIR/workspace
@@ -112,6 +113,14 @@ data:
         rm "$PIPE"
     }
 
+    function cleanup_log() {
+        # Check if the log file already exists
+        if [[ -e $LOG_FILE ]]; then
+            # Remove ANSI escape sequences from log file
+            sed -E 's/\x1B\[[0-9;]+[A-Za-z]//g' "$LOG_FILE" > "$LOG_FILE.tmp" && mv "$LOG_FILE.tmp" "$LOG_FILE"
+        fi
+    }
+
     function msg() {
         printf '%b\n' "$1"
     }
@@ -161,6 +170,7 @@ data:
 
     function main {
         save_log "logs" "restore_log"
+        trap cleanup_log EXIT
         title "Beginning restore process for zenservice $ZENSERVICE_NAME in namespace $ZEN_NAMESPACE."
         info "Wait for zenservice $ZENSERVICE_NAME to be ready..."
         wait_for_zenservice
@@ -355,6 +365,14 @@ data:
 
         # Remove the named pipe
         rm "$PIPE"
+    }
+
+    function cleanup_log() {
+        # Check if the log file already exists
+        if [[ -e $LOG_FILE ]]; then
+            # Remove ANSI escape sequences from log file
+            sed -E 's/\x1B\[[0-9;]+[A-Za-z]//g' "$LOG_FILE" > "$LOG_FILE.tmp" && mv "$LOG_FILE.tmp" "$LOG_FILE"
+        fi
     }
 
     function msg() {
