Enable traffic to mongodb for IAM operator
Signed-off-by: Daniel Fan <fanyuchensx@gmail.com>

--- a/cp3-networkpolicy/egress/operators/bedrock-egress-ibm-iam-operator.yaml
+++ b/cp3-networkpolicy/egress/operators/bedrock-egress-ibm-iam-operator.yaml
@@ -18,6 +18,11 @@ spec:
       podSelector:
         matchLabels:
           k8s-app: "platform-identity-provider"
+  - to:
+    - namespaceSelector: {}
+      podSelector:
+        matchLabels:
+          app: icp-mongodb
   - ports:
     - port: 443
       protocol: TCP
