label operandrequests and zen services
Signed-off-by: YuChen <yuchen.shen@mail.utoronto.ca>

--- a/velero/backup/common-service/env.properties
+++ b/velero/backup/common-service/env.properties
@@ -1,6 +1,9 @@
 # Change the following values to match your environment
 OPERATOR_NS="" # Pass the namespace where the cs operator is installed
-SERVICES_NS="" # Pass the namespace where the cs services are installed
+
+# Pass the namespace where the cs services are installed
+# Leave it as empty string if the services are installed in the same namespace as the operator
+SERVICES_NS="" 
 CONTROL_NS="" # Pass the control namespace if it is needed to be backed up
 
 # Change to the namespace where cert-manager, licensing and LSR are installed
