update recipe and scripts
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/schedule/common-service-db/cs-db-backup-deployment.yaml
+++ b/velero/schedule/common-service-db/cs-db-backup-deployment.yaml
@@ -3,6 +3,8 @@ apiVersion: apps/v1
 metadata:
   name: cs-db-backup
   namespace: <cs-db namespace>
+  labels:
+    foundationservices.cloudpak.ibm.com: cs-db-data
 spec:
   selector:
     matchLabels:
