--- a/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-deployment.yaml
+++ b/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-deployment.yaml
@@ -19,7 +19,7 @@ spec:
           - sh
           - -c
           - sleep infinity
-          image: docker-na-public.artifactory.swg-devops.com/hyc-cloud-private-scratch-docker-local/ibmcom/cpfs-utils-amd64:4.6.0 #4.1.0 if using CS 4.1, 4.2.0 if using CS 4.2
+          image: icr.io/cpopen/cpfs/cpfs-utils:4.6.0
           imagePullPolicy: IfNotPresent
           name: cpfs-util
           resources:
@@ -39,7 +39,7 @@ spec:
           - name: scripts
             mountPath: "/cs-br"
           - name: logs
-            mountPath: /cs-br/logs
+            mountPath: /scripts/logs
         dnsPolicy: ClusterFirst
         schedulerName: default-scheduler
         securityContext:
