--- a/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns.yaml
+++ b/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns.yaml
@@ -121,6 +121,14 @@ spec:
       labelSelector: foundationservices.cloudpak.ibm.com=operand
       name: odlm-resources
       type: resource
+    - backupRef: odlm-resources
+      includedResourceTypes:
+        - operandrequests.operator.ibm.com
+        - operandconfigs.operator.ibm.com
+      labelSelector: foundationservices.cloudpak.ibm.com=operand
+      name: operand-resources
+      restoreOverwriteResources: true
+      type: resource
     - labelSelector: foundationservices.cloudpak.ibm.com=zen5-data
       name: zen-volume
       type: volume
@@ -405,6 +413,7 @@ spec:
         - group: common-services-subscriptions
         - group: cert-manager-workload-resources
         - group: odlm-resources
+        - group: operand-resources
         - group: licensing-resources
     - failOn: any-error
       name: restore
@@ -429,6 +438,7 @@ spec:
         - hook: setup-tenant/setup-tenant-command
         - hook: odlm-check/podReady
         - group: odlm-resources
+        - group: operand-resources
         - hook: common-service-db-check/podReady
         - group: zen-instance
         - group: cs-db-pre-deploy
