--- a/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-serv-tethered-rolebinding.yaml
+++ b/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-serv-tethered-rolebinding.yaml
@@ -13,4 +13,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: cpfs-util-sa
-  namespace: <operator namespace
+  namespace: <operator namespace>
