--- a/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-clusterrole.yaml
+++ b/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-clusterrole.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: cpfs-util-cluster-role
-  namespace: cs-op
+  namespace: <operator namespace>
   labels:
     foundationservices.cloudpak.ibm.com: cpfs-util-backup
 rules:
