--- a/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-clusterrolebinding.yaml
+++ b/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-clusterrolebinding.yaml
@@ -2,15 +2,15 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: cpfs-util-cluster-rolebinding
-  namespace: cs-op
+  namespace: <operator namespace>
   labels:
     foundationservices.cloudpak.ibm.com: cpfs-util-backup
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: cpfs-util-cluster-role
-  namespace: cs-op
+  namespace: <operator namespace>
 subjects:
 - kind: ServiceAccount
   name: cpfs-util-sa
-  namespace: cs-op
+  namespace: <operator namespace>
