--- a/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-pvc.yaml
+++ b/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-pvc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: cpfs-util-backup-pvc
-  namespace: cs-op
+  namespace: <operator namespace>
   labels:
     foundationservices.cloudpak.ibm.com: cpfs-util-backup
 spec:
