--- a/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-sa.yaml
+++ b/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-sa.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: cpfs-util-sa
-  namespace: cs-op
+  namespace: <operator namespace>
   labels:
     foundationservices.cloudpak.ibm.com: cpfs-util-backup
