--- a/velero/spectrum-fusion/recipes/4.7-example-recipe-single-ns.yaml
+++ b/velero/spectrum-fusion/recipes/4.7-example-recipe-single-ns.yaml
@@ -49,6 +49,15 @@ spec:
       labelSelector: foundationservices.cloudpak.ibm.com=pull-secret
       name: pull-secret
       type: resource
+    - backupRef: pull-secret
+      includedNamespaces:
+        - openshift-config
+      includedResourceTypes:
+        - secrets
+      labelSelector: foundationservices.cloudpak.ibm.com=pull-secret
+      name: ow-pull-secret
+      restoreOverwriteResources: true
+      type: resource
     - includedResourceTypes:
         - configmaps
       labelSelector: foundationservices.cloudpak.ibm.com=configmap
@@ -359,6 +368,7 @@ spec:
       sequence:
         - group: common-services-namespace
         - group: pull-secret
+        - group: ow-pull-secret
         - group: common-services-catalogs
         - group: common-services-operatorgroups
         - group: common-services-configmaps
